--- a/my_app/templates/admin/create.html
+++ b/my_app/templates/admin/create.html
@@ -1,4 +1,5 @@
 {% extends 'admin/base_admin.html' %}
 {% block content %}
-	
+	{% from 'macros/_input.html' import input_field %}
+	{{ input_field(name='user') }}
 {% endblock %}
