--- a/my_app/templates/admin/base_admin.html
+++ b/my_app/templates/admin/base_admin.html
@@ -356,14 +356,15 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+                    <div class="d-sm-flex align-items-center  mb-4">
+                        <h1 class="h3 mb-0 text-gray-800">{% block sub_title %}
+                        {% endblock %}</h1>
+                        
                     </div>
 
                     <!-- Content Row -->
                     <div class="row">
+                        
                         {% block content %}
                         {% endblock %}
                     </div>
