--- a/my_app/templates/macros/_option.html
+++ b/my_app/templates/macros/_option.html
@@ -1,7 +1,7 @@
 {% macro combo(name, list) -%}
 	<div class="form-group">
 		<select name="{{ name }}" class="form-control">
-		{% for item in list %}
+		{% for item in list[0] %}
 			<option  value="{{ item.id }}">{{ item }}</option>
 		{% endfor %}
 	</select>
